feature: concluindo autenticacao do usuario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+<!--    //Generic messages-->
+
+
     <!--    //Bottom Sheet-->
     <string name="title_default_bottom_sheet">Atenção!</string>
     <string name="title_default_button_bottom_sheet">Entendi</string>
@@ -11,11 +14,13 @@
     <string name="name_is_empty_alert">Preencha o campo de nome</string>
     <string name="email_is_empty_alert">Preencha o campo de e-mail</string>
     <string name="phone_is_empty_alert">Preencha o campo de telefone</string>
+    <string name="phone_invalid_alert">Preencha um telefone válido</string>
     <string name="password_is_empty_alert">Preencha o campo de senha</string>
     <string name="message_email_send_success">E-mail enviado com sucesso! Verifique sua caixa de entrada ou spam</string>
 
     <!--    Firebase Alerts messages-->
     <string name="ERROR_USER_NOT_FOUND">Nenhuma conta encontrada com este e-mail.</string>
+    <string name="ERROR_INCORRECT_CREDENTIAL">Credenciais inválidas, verifique e tente novamente.</string>
     <string name="ERROR_EMAIL_ALREADY_IN_USE">E-mail já esta em uso.</string>
     <string name="ERROR_INVALID_EMAIL">Insira um e-mail válido.</string>
     <string name="ERROR_WRONG_PASSWORD">Senha inválida, tente novamente.</string>
