--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--    //Generic messages-->
+    <string name="txt_button_bottomSheet_confirm">Confirmar</string>
 
 <!--    HomeFragment-->
     <string name="text_formated_value">R$ %1$s</string>
